# food-delivery-subscription-calculator

./: README.md  TODO.md  fdsc.cabal  hie.yaml
cmd/fdsc/: Main.hs
src/FDSC/: App.hs  UberEats.hs
