cabal-version: 3.0
name:          food-delivery-subscriptions
version:       0.1.0.0

common lang
  build-depends:
    , base    >=4.12    && <4.15
    , relude  ^>=1.0.0.1

  default-language:   Haskell2010
  default-extensions:
    NoImplicitPrelude
    Arrows
    BangPatterns
    BinaryLiterals
    ConstrainedClassMethods
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DuplicateRecordFields
    EmptyCase
    EmptyDataDeriving
    ExistentialQuantification
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    GADTSyntax
    GeneralizedNewtypeDeriving
    HexFloatLiterals
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    MultiParamTypeClasses
    NamedFieldPuns
    NamedWildCards
    NumericUnderscores
    OverloadedStrings
    PolyKinds
    PostfixOperators
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    StrictData
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeOperators
    TypeSynonymInstances

  ghc-options:
    -Wall -Wincomplete-uni-patterns -Wcompat
    -Wincomplete-record-updates -Wmissing-home-modules
    -Wmissing-export-lists -Wredundant-constraints

library fdsc-lib
  import:          lang
  hs-source-dirs:  src
  build-depends:
    , aeson       ^>=1.5.6.0
    , containers  ^>=0.6.5.1
    , req         ^>=3.9.1
    , time        ^>=1.9.3

  -- cabal-fmt: expand src
  exposed-modules: FDSC.UberEats

executable fdsc
  import:         lang
  main-is:        Main.hs

  -- cabal-fmt: expand cmd/fdsc -Main
  other-modules:
  hs-source-dirs: cmd/fdsc
  build-depends:
    , fdsc-lib
    , optparse-applicative  ^>=0.16.1.0
